--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 jwt:
   lifetime: 4h
-  secret: lajhdLKAJDHLkjh3-864kajshdljhgrlq-wdas1
+  secret: ${TASK_TRACKER_JWT_SECRET:lkjdf-pe9KJ0hkm1fls-L7K-la4IWlajPO0WE}
 
 spring:
   application:
     name: task-tracker
   datasource:
-    url: jdbc:postgresql://localhost:5432/task_tracker
-    username: postgres
-    password: 1234
+    url: jdbc:postgresql://${TASK_TRACKER_DATABASE_HOST:localhost}:${TASK_TRACKER_DATABASE_PORT:5432}/${TASK_TRACKER_DATABASE_NAME:task_tracker}
+    username: ${TASK_TRACKER_DATABASE_USERNAME:postgres}
+    password: ${TASK_TRACKER_DATABASE_PASSWORD:1234}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
@@ -16,6 +16,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: true
   sql:
     init:
       mode: always
